fix offset when selecting tabs not totally visible. improve docs. change `name` to `value`.

--- a/tests/dummy/app/styles/demo.scss
+++ b/tests/dummy/app/styles/demo.scss
@@ -1502,3 +1502,7 @@ md-input-container .hint {
 .tabs-demo .md-padding h1:first-child {
   margin-top: 0;
 }
+
+md-tabs.md-primary {
+  border-radius: 0px;
+}
